コンテスト作成画面のテキストを修正 設計変更前の説明が残ってしまっていたため、現状に合わせたテキストに修正した。

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -228,11 +228,11 @@ ja:
     contests:
       new:
         title: コンテストを作成する
-        description_with_contests: フォームにコンテスト名と投票期日を入力して作成ボタンを押すことで、新しいコンテストを作成することができます。
+        description_with_contests: フォームにコンテスト名と投票期日を入力して「作成する」ボタンを押すことで、新しいコンテストを作成することができます。
         welcome_message:
           title: "%{name}さん"
           welcome: ようこそPixPickへ！
-          description: PixPickは、Googleフォトから気になる写真をピックアップしてコンテストを開催し、参加者の投票によりベストショットを決めることができるサービスです。
+          description: PixPickは、お使いのデバイスからお気に入りの写真をピックアップしてコンテストを開催し、参加者の投票によりベストショットを決めることができるサービスです。
           no_contests: "まだ、%{name}さんが参加しているコンテストはありません。"
           usage: このサービスは、自分でコンテストを開催するか、招待されたコンテストに参加することで、利用することができます。
           form_prompt: 以下のフォームからコンテストを開催できます。
